force-app/main/default/objects/OA_GAnalytics__c/OA_GAnalytics__c.object-meta.xml
<CustomObject>
    <label>GAnalytics</label>
    <nameField>
        <displayFormat>GA-{00000}</displayFormat>
        <label>GAnalyticsID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GAnalytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>