force-app/main/default/objects/OA_GAnalytics__c/fields/OA_AvgEventValue__c.field-meta.xml
<CustomField>
    <fullName>OA_AvgEventValue__c</fullName>
    <label>AvgEventValue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>