force-app/main/default/objects/OA_GAnalytics__c/fields/OA_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>OA_Campaign_ID__c</fullName>
    <label>Campaign</label>
    <length>80</length>
    <type>Text</type>
</CustomField>