force-app/main/default/objects/OA_GAnalytics__c/fields/OA_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>OA_Campaign_Source__c</fullName>
    <label>Campaign Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>