force-app/main/default/objects/OA_GAnalytics__c/fields/OA_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>OA_Contact_ID__c</fullName>
    <label>OA_Contact_ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>