force-app/main/default/objects/OA_GAnalytics__c/fields/OA_Event_Action__c.field-meta.xml
<CustomField>
    <fullName>OA_Event_Action__c</fullName>
    <label>Event Action</label>
    <length>30</length>
    <type>Text</type>
</CustomField>