force-app/main/default/objects/OA_GAnalytics__c/fields/OA_Event_Label__c.field-meta.xml
<CustomField>
    <fullName>OA_Event_Label__c</fullName>
    <label>Event Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>