force-app/main/default/objects/OA_GAnalytics__c/fields/OA_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>OA_Lead_ID__c</fullName>
    <label>Lead ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>