force-app/main/default/objects/OA_GAnalytics__c/fields/OA_Unique_Events__c.field-meta.xml
<CustomField>
    <fullName>OA_Unique_Events__c</fullName>
    <label>Unique Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>