force-app/main/default/objects/OA_GAnalytics__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OA_Campaign_ID__c</columns>
    <columns>OA_Lead_ID__c</columns>
    <columns>OA_Contact_ID__c</columns>
    <columns>OA_Hits__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>